@@ -10,6 +10,9 @@ DON'T FORGET TO BUMP THE -version-info PRE-RELEASE IF NECESSARY!
 * Issue #23: Fix double-free triggered by atf_map_insert in low memory
   scenarios, caused by an overlook in the atf_list code.
 
+* Issue #31: Added require.progs metadata properties to the tests that
+  need a compiler to run.
+
 
 Changes in version 0.21
 ***********************
